manifests-failed/apm-attacher-1.0.0.tgz-manifest.yaml
---
# Source: apm-attacher/templates/webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release
  namespace: apm-attacher-1.0.0.tgz
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: https
  selector:    
    app.kubernetes.io/name: my-release
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: my-release
---
# Source: apm-attacher/templates/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release
  namespace: apm-attacher-1.0.0.tgz
  labels:    
    app.kubernetes.io/name: my-release
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: my-release
spec:
  replicas: 1
  selector:
    matchLabels:      
      app.kubernetes.io/name: my-release
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        generated-cert: 852a1c2e900f7ef8bb44fa61db1449bc0493780dffa038f161ee474e88551b47
      labels:        
        app.kubernetes.io/name: my-release
        app.kubernetes.io/component: webhook
        app.kubernetes.io/instance: my-release
    spec:
      containers:
        - name: my-release
          image: "docker.elastic.co/observability/apm-attacher:v1.0.0"
          imagePullPolicy: Always
          args:
            - -certFile=/opt/webhook/certs/cert.pem
            - -keyFile=/opt/webhook/certs/key.pem
            - -config=/opt/webhook/config/webhook.yaml
          volumeMounts:
            - name: my-release-certs
              mountPath: /opt/webhook/certs
              readOnly: true
            - name: config
              mountPath: /opt/webhook/config
              readOnly: true
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
      volumes:
        - name: my-release-certs
          secret:
            secretName: my-release
        - name: config
          configMap:
            name: webhook-config
---
# Source: apm-attacher/templates/webhook.yaml
# This file is based on modifications to Kubernetes Mutating Webhook by Expedia, Inc., which is licensed under Apache 2.0.
# https://github.com/ExpediaGroup/kubernetes-sidecar-injector
---
# Source: apm-attacher/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release
  labels:    
    app.kubernetes.io/name: my-release
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: my-release
webhooks:
  - name: my-release.apm-attacher-1.0.0.tgz.svc.cluster.local
    clientConfig:
      service:
        name: my-release
        namespace: apm-attacher-1.0.0.tgz
        path: "/"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIRENDQWdTZ0F3SUJBZ0lSQUwrajFrZjdtL2lsT0N6cjZCWGJwWEF3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQXhNTmJYa3RjbVZzWldGelpTMWpZVEFlRncweU5EQTJNakF4TkRVMU1ESmFGdzB6TkRBMgpNVGd4TkRVMU1ESmFNQmd4RmpBVUJnTlZCQU1URFcxNUxYSmxiR1ZoYzJVdFkyRXdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ25PSW1vajRDN1FhckIvSWs3MmFzV0VOU2UvWCtndHovcG5lREMKWE1obnpYWEE3VnFWSUpSYU8ydy95T0ExVjkwNzdHL3A5cGFUSGwra0s1RVNMSDNFNlBZYlNTUzlvelJ3T1A1WQp4bmNDeWdWZzQ1 [...]
    failurePolicy: Fail
    admissionReviewVersions: [ "v1", "v1beta1" ]
    sideEffects: None
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["*"]
        resources: ["pods"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - kube-public
            # The webhook has to be deployed to its own namespace, or else
            # attempts at scaling up pods will fail when trying to call
            # themself.
            - apm-attacher-1.0.0.tgz
